--- a/css/home.css
+++ b/css/home.css
@@ -12,3 +12,23 @@ header{
     padding: 40px 0 30px 0;
     text-align: center;
 }
+
+nav ul{
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+}
+
+nav a{
+    color:#fff;
+    text-decoration: none;
+    font-weight: bold;
+    transition: color 0.2s;
+    padding: 10px 18px;
+    border-radius: 4px;
+    background: #000000;
+}
+
