--- a/css/home.css
+++ b/css/home.css
@@ -36,3 +36,16 @@ nav a:hover{
     background: #003f7d;
     color: #222;
 }
+
+.btn-destaque{
+    background: #fff;
+    color: #0057b8 !important;
+    border: none;
+    front-weight: bold;
+    transition: background 0.2s, color 0.2s;
+}
+
+.btn-destaque:hover{
+    background: #0057b8;
+    color: #fff !important;
+}
