--- a/css/home.css
+++ b/css/home.css
@@ -1,19 +1,20 @@
-body{
-    front-family: Arial, sans-serif;
-    margin:0;
+/* Estilo para o cabeçalho */
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
     background: #491552;
     color: #222;
     font-size: 16px;
 }
 
-header{
+header {
     background: #000000;
     color: #fff;
     padding: 40px 0 30px 0;
     text-align: center;
 }
 
-nav ul{
+nav ul {
     list-style: none;
     padding: 0;
     margin: 0;
@@ -22,30 +23,31 @@ nav ul{
     gap: 30px;
 }
 
-nav a{
-    color:#fff;
+/* Estilo para os links de navegação */
+nav a {
+    color: #fff;
     text-decoration: none;
     font-weight: bold;
     transition: color 0.2s;
     padding: 10px 18px;
     border-radius: 4px;
-    background: #000000;
 }
 
-nav a:hover{
+nav a:hover {
     background: #003f7d;
-    color: #222;
+    color: #fff;
 }
 
-.btn-destaque{
+/* Estilo para o botão de destaque */
+.btn-destaque {
     background: #fff;
     color: #0057b8 !important;
     border: none;
-    front-weight: bold;
+    font-weight: bold;
     transition: background 0.2s, color 0.2s;
 }
 
-.btn-destaque:hover{
+.btn-destaque:hover {
     background: #0057b8;
     color: #fff !important;
 }
